# fiducia-clients

./: .cli-flags.toml  .dockerignore  .gitignore  .gitmodules  Dockerfile  ENDPOINTS.md  PROTOCOL.md  README.md  generate.py  generate_test.py  operations.json
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  cli-flags.yml  client-packaging-NOTES.md  client-packaging.yml
.nix/: README.md
clients/: PUBLISHING.md  README.md
clients/c/: CMakeLists.txt  README.md  fiducia.c  fiducia.h  publish.sh
clients/clojure/: README.md  build.clj  deps.edn  publish.sh
clients/clojure/.cpcache/: 2400235594.basis  2400235594.cp  2736602536.basis  2736602536.cp
clients/clojure/src/: README.md
clients/clojure/src/fiducia/: README.md  client.clj
clients/cpp/: CMakeLists.txt  README.md  fiducia.hpp  publish.sh
clients/crystal/: README.md  publish.sh  shard.yml
clients/crystal/src/: README.md  fiducia.cr
clients/csharp/: Fiducia.Client.csproj  Fiducia.cs  README.md  publish.sh
clients/dart/: CHANGELOG.md  README.md  fiducia.dart  fiducia_secrets_test.dart  fiducia_sync_test.dart  publish.sh  pubspec.yaml
clients/elixir/: README.md  fiducia.ex  mix.exs  publish.sh
clients/erlang/: README.md  publish.sh  rebar.config
clients/erlang/src/: README.md  fiducia.erl  fiducia_client.app.src
clients/fsharp/: Fiducia.FSharp.Client.fsproj  Fiducia.fs  README.md  publish.sh
clients/gleam/: README.md  gleam.toml  manifest.toml  publish.sh
clients/gleam/src/: README.md  fiducia.gleam  fiducia_ffi.erl  fiducia_smoke.gleam
clients/go/: README.md  fiducia.go  fiducia_test.go  go.mod  locking.go  locking_test.go  publish.sh
clients/haskell/: LICENSE  README.md  fiducia-client.cabal  publish.sh
clients/haskell/src/: Fiducia.hs  README.md
clients/java/: Fiducia.java  README.md  pom.xml  publish.sh
clients/julia/: Manifest.toml  Project.toml  README.md  publish.sh
clients/julia/src/: Fiducia.jl  README.md
clients/kotlin/: README.md  build.gradle.kts  publish.sh  settings.gradle.kts
clients/kotlin/src/: README.md
clients/kotlin/src/main/: README.md
clients/kotlin/src/main/kotlin/: README.md
clients/kotlin/src/main/kotlin/cloud/: README.md
clients/kotlin/src/main/kotlin/cloud/fiducia/: Fiducia.kt  README.md
clients/lua/: README.md  fiducia-client-0.1.0-1.rockspec  fiducia.lua  publish.sh
clients/matlab/: Fiducia.m  README.md  publish.sh
clients/nim/: README.md  fiducia.nimble  publish.sh
clients/nim/src/: README.md  fiducia.nim
clients/ocaml/: README.md  dune-project  fiducia-client.opam  publish.sh
clients/ocaml/lib/: README.md  dune  fiducia.ml
clients/ocaml/test/: dune  smoke.ml
clients/php/: Fiducia.php  README.md  composer.json  publish.sh
clients/powershell/: Fiducia.psd1  Fiducia.psm1  README.md  publish.sh
clients/python/: README.md  auth_e2e.py  cli.py  feature_tests.py  fiducia.py  fiducia_test.py  live_tests.py  locking.py  publish.sh  pyproject.toml  resilience_tests.py
clients/r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  publish.sh
clients/r/R/: README.md  fiducia.R
clients/ruby/: README.md  fiducia-client.gemspec  fiducia.rb  publish.sh
clients/rust/: Cargo.toml  README.md  publish.sh
clients/rust-wasm/: Cargo.toml  README.md  publish.sh  smoke.test.mjs
clients/rust-wasm/src/: README.md  lib.rs
clients/rust/src/: README.md  lib.rs  locking.rs
clients/scala/: README.md  build.sbt  publish.sh
clients/scala/project/: README.md
clients/scala/src/: README.md
clients/scala/src/main/: README.md
clients/scala/src/main/scala/: README.md
clients/scala/src/main/scala/cloud/fiducia/: Fiducia.scala  README.md
clients/shell/: README.md  fiducia.sh  publish.sh
clients/swift/: Package.swift  README.md  publish.sh
clients/swift/.build/: build.db  build.db-journal  debug.yaml
clients/swift/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
clients/swift/.build/arm64-apple-macosx/debug/Fiducia.build/: Fiducia-Swift.h  Fiducia.d  Fiducia.emit-module.d  Fiducia.swiftdeps  master.priors  module.modulemap  output-file-map.json  sources
clients/swift/.build/arm64-apple-macosx/debug/ModuleCache/: Swift-354A4ODUDY9MI.swiftmodule.lock-5ed0569c
clients/swift/.build/arm64-apple-macosx/debug/ModuleCache/15JHG4V7YW4VN/: AvailabilityMacros-1Q581SB3T2HYB.pcm  CFNetwork-2PPHJ4XZUHAKR.pcm  CoreFoundation-2FRT5V8BI9EPK.pcm  DarwinFoundation-2CMV7FB5F9CQ1.pcm  DiskArbitration-X00SWIXYJSD5.pcm  Dispatch-A1QNEGPWN2TI.pcm  MachO-2YB8183071310.pcm  ObjectiveC-FACGRYV32UDF.pcm  Security-3IX6Y1GINEPMB.pcm  SwiftShims-3NQPJMR94IEXI.pcm  TargetConditionals-18Z06ASF9UB3E.pcm  XPC-1VC33UDFAKETS.pcm  _Builtin_float-3PGQF5YETHUX5.pcm  _Builtin_inttypes-3PGQF5YETHUX5.pcm  _Builtin_iso646-3PGQF5YETHUX5.pcm  _Builtin_limits-3PGQF5YETHUX5.pcm  _Builtin_stdarg-3PGQF5YETHUX5.pcm  _Builtin_stdatomic-3PGQF5YETHUX5.pcm  _Builtin_stdbool-3PGQF5YETHUX5.pcm  _Builtin_stddef-3PGQF5YETHUX5.pcm  _Builtin_stdint-3PGQF5YETHUX5.pcm  _Builtin_tgmath-3PGQF5YETHUX5.pcm  _SwiftConcurrencyShims-3NQPJMR94IEXI.pcm  __wctype-37T94S4FRH7L0.pcm  _assert-37T94S4FRH7L0.pcm  _complex-37T94S4FRH7L0.pcm  _ctype-37T94S4FRH7L0.pcm  _errno-37T94S4FRH7L0.pcm  _fenv-37T94S4FRH7L0.pcm  _float-37T94S4FRH7L0.pcm  _inttypes-37T94S4FRH7L0.pcm  _limits-37T94S4FRH7L0.pcm  _locale-37T94S4FRH7L0.pcm  (+38 more)
clients/swift/.build/arm64-apple-macosx/debug/Modules/: Fiducia.swiftdoc  Fiducia.swiftmodule  Fiducia.swiftsourceinfo
clients/swift/Sources/: README.md
clients/swift/Sources/Fiducia/: Fiducia.swift  README.md
clients/ts/: README.md  fiducia.test.ts  fiducia.ts  locking.test.ts  locking.ts  package-lock.json  package.json  publish.sh  secrets.test.ts  sync-compatibility.ts  sync.test.ts  tsconfig.json
clients/zig/: README.md  build.zig  build.zig.zon  publish.sh
clients/zig/src/: README.md  fiducia.zig
conformance/: README.md  docker-compose.yml  run-node.sh  smoke.sh
scripts/: README.md  publish-client.sh  publish-common.sh  with-flags2env.sh
templates/: README.md  go.go.tmpl  python.py.tmpl  typescript.ts.tmpl
tools/: README.md
(+225 files in other folders)
