cabal-version:      2.4
name:               fiducia-client
version:            0.1.0
synopsis:           Fiducia HTTP client for fiducia.cloud.
description:
  A dependency-light Haskell client for the fiducia.cloud HTTP API:
  distributed locks, semaphores, idempotency, reader-writer locks, config KV,
  rate limiting, cron scheduling, leader election, and service discovery.
  Every operation returns the parsed JSON response as an aeson @Value@.

homepage:           https://github.com/fiducia-cloud/fiducia-clients
bug-reports:        https://github.com/fiducia-cloud/fiducia-clients/issues
author:             fiducia.cloud
maintainer:         fiducia.cloud

-- Siblings are proprietary/UNLICENSED. LicenseRef-Proprietary is a valid SPDX
-- custom-reference expression accepted by cabal-version >= 2.2 (the legacy
-- AllRightsReserved token is not valid SPDX and would fail parsing here).
license:            LicenseRef-Proprietary
license-file:       LICENSE
category:           Network
build-type:         Simple
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/fiducia-cloud/fiducia-clients
  subdir:   clients/haskell

library
  exposed-modules:  Fiducia
  hs-source-dirs:   src
  build-depends:
      base             >=4.11 && <5
    , aeson            >=2.0  && <2.3
    , bytestring       >=0.10 && <0.13
    , http-client      >=0.6  && <0.8
    , http-client-tls  >=0.3  && <0.4
    , http-types       >=0.12 && <0.13
    , network-uri      >=2.6  && <2.7
    , text             >=1.2  && <2.2

  default-language: Haskell2010
  ghc-options:      -Wall
