[package]
name = "fiducia-client-wasm"
version = "0.1.0"
edition = "2021"
description = "Fiducia HTTP client compiled to WebAssembly (browser fetch transport)."
license-file = "../rust/LICENSE.txt"
repository = "https://github.com/fiducia-cloud/fiducia-clients"
include = ["Cargo.toml", "src/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "Window",
]
