# Cargo manifest for the Rust Fiducia client.
[package]
name = "fiducia-client"
version = "0.1.0"
edition = "2021"
description = "HTTP client for fiducia.cloud."
license-file = "LICENSE.txt"
repository = "https://github.com/fiducia-cloud/fiducia-clients"
include = ["Cargo.toml", "LICENSE.txt", "src/**"]

[dependencies]
ureq = { version = "3.3", features = ["json"] }
serde_json = "1"

# Shared, generated payload/error contract — re-exported as `types` so callers
# can deserialize responses into typed structs instead of poking at `Value`.
fiducia-interfaces = { git = "https://github.com/fiducia-cloud/fiducia-interfaces.git", rev = "e3dba39566e036ad61de91e2e6c1d625ec2b5411" }
